--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                 </li>
             </ul>
         </article>
+        <a href="https://g.co/kgs/qGcnBAo">Patrocinados por "Mueblería Alondra"</a>
     </section>
     
     <section id="contacto">
