--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </li>
             </ul>
         </article>
-        <a href="https://g.co/kgs/qGcnBAo">Patrocinados por "Mueblería Alondra"</a>
+        <a href="https://g.co/kgs/qGcnBAo">Patrocinados por "Mueblería Alondra" Aquiles Serdán 42, Industrial, 20670 Pabellón de Arteaga, Ags.</a>
     </section>
     
     <section id="contacto">
