--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     
     <nav>
         <a href="#materiales">Materiales</a>
-        <a href="#contacto">Contacto</a>
+        <a href="https://drive.google.com/drive/folders/1WRqkl05jTCxBISLkAbcbujDHfNggW28L?usp=drive_link">Juegos</a>
     </nav>
     
     <section id="materiales">
