--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         }
         nav a {
             text-decoration: none;
+            color: #000000;
             margin: 0 15px;
             font-weight: bold;
             transition: color 0.3s ease; /* Transición suave */
